base de datos conectado bien

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,23 @@
 version: "3.1"
 services:
+    db:
+        image: mysql
+        ports: 
+            - "3306:3306"
+        command: --default-authentication-plugin=mysql_native_password
+        environment:
+            MYSQL_DATABASE: tienda
+            MYSQL_PASSWORD: test
+            MYSQL_ROOT_PASSWORD: test 
+        volumes:
+            - ./db:/docker-entrypoint-initdb.d
+            - ./conf:/etc/mysql/conf.d
+            - persistent:/var/lib/mysql
+        networks:
+            - default
     www:
         build: .
-        ports:
+        ports: 
             - "80:80"
         volumes:
             - ./www:/var/www/html
@@ -10,31 +25,15 @@ services:
             - db
         networks:
             - default
-    db:
-        image: mysql:8.0
-        ports:
-            - "3306:3306"
-        command: --default-authentication-plugin=mysql_native_password
-        environment:
-            MYSQL_DATABASE: tienda
-            MYSQL_USER: user
-            MYSQL_PASSWORD: test
-            MYSQL_ROOT_PASSWORD: test
-        volumes:
-            - ./db:/docker-entrypoint-initdb.d
-            - ./conf:/etc/mysql/conf.d
-            - persistent:/var/lib/mysql
-        networks:
-            - default
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
-        links:
+        links: 
             - db:db
         ports:
             - 8000:80
         environment:
             MYSQL_USER: root
             MYSQL_PASSWORD: test
-            MYSQL_ROOT_PASSWORD: test
+            MYSQL_ROOT_PASSWORD: test 
 volumes:
     persistent:
