puesto en mvc sin linquear

--- a/000-default.conf
+++ b/000-default.conf
@@ -1,10 +1,20 @@
 <VirtualHost *:80>
-
-	DocumentRoot /var/www/html
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/html
+    
+	<Directory /var/www/html>
+		Options +Indexes +FollowSymLinks +MultiViews
+		AllowOverride All
+		Require all granted
+		#AddType application/x-httpd-php .php
+		#AddHandler application/x-httpd-php .php
+		ErrorDocument 404 /error-404.php
+	</Directory>
 
 	<FilesMatch "^[^.]+$">
 	    FallbackResource /index.php
 	</FilesMatch>
-	
+
+	ErrorLog ${APACHE_LOG_DIR}/error.log
 </VirtualHost>
 
