--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,9 @@ services:
             - default
 
     node:
-        build: ./node-service # Debes tener un directorio separado para tu servicio Node.js
+        build: ./node-service
         ports:
-            - "3000:3000" # Ajusta el puerto según las necesidades de tu aplicación
+            - "3000:3000"
         networks:
             - default
 
@@ -53,5 +53,3 @@ volumes:
 
 networks:
     default:
-
-
